# tidmon-cli

./: .gitignore  CHANGELOG.md  COMMANDS.md  CONFIG_GUIDE.md  README.md  pyproject.toml
src/tidmon/: cli.py
src/tidmon/cmd/: auth.py  download.py  favorite.py  monitor.py  playlist.py  refresh.py  show.py  xref.py
src/tidmon/core/: api.py  auth.py  auth_client.py  auth_models.py  client.py  config.py  db.py  downloader.py  playback.py  web_login.py
src/tidmon/core/models/: base.py
src/tidmon/core/utils/: format.py  metadata.py
