[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tidmon-cli"
version = "1.0.0"
authors = [
  { name="Np3ir", email="author@example.com" },
]
description = "A powerful command-line tool for monitoring TIDAL artists, tracking new releases, and automating your music library management."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles>=23.2",
    "aiohttp>=3.11.0",
    "click>=8.1",
    "m3u8>=5.1",
    "mutagen>=1.47",
    "Pillow>=11.1.0",
    "pydantic>=1.10,<2.0",
    "requests>=2.31",
    "requests-cache>=1.2",
    "rich>=13.7"
]

[project.urls]
"Homepage" = "https://github.com/Np3ir/tidmon-cli"
"Bug Tracker" = "https://github.com/Np3ir/tidmon-cli/issues"

[project.scripts]
tidmon = "tidmon.cli:run"

[tool.setuptools.packages.find]
where = ["src"]